:bug: Footer alignment
Fixed footer from aligning wrong on the left side

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,10 @@ body {
     background-color: $nord0;
 }
 
+h1 {
+    font-size: 2.3rem;
+}
+
 button {
     transition: 0.3s;
 
