--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -4,7 +4,8 @@ img:hover {
 
 .footer {
     width: 100%;
-    bottom: 0%;
+    bottom: 0;
+    left: 0;
 
     padding-top: 9px;
     padding-bottom: 4px;
